# gelatin

./: .gitignore  Cargo.toml  README.md  deno.json  gelatin.d.ts  import_map.json  lib.rs  mod.ts
examples/: canvas.ts  simple.ts
scripts/: build.ts
src/: Geometry.ts  Node.ts  Style.ts  Taffy.ts  lib.rs  types.ts  wasm.js
stretch/: stretch.d.ts
stretch/examples/: test.ts
stretch/scripts/: build.ts
stretch/src/: wasm.js
taffy/src/: Geometry.ts  Layout.ts  utils.ts
tests/: node_test.ts
