[package]
name = "stretched-marshmallow"
version = "0.1.0"
description = "taffy compiled to wasm"
edition = "2021"

[lib]
path = "./lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
taffy="0.2.2"
slotmap = "1.0.6"
[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
