[package]
name = "stretch-layout"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3"
taffy = { git = "https://github.com/DioxusLabs/taffy" }
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
opt-level = "s"
